--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -12,7 +12,7 @@
 }
 
 .project-image {
-  max-width: 100%;
+  width: 100%;
   height: 300px; /* Set height to match width */
   object-fit: cover; /* Change 'contain' to 'cover' if you want it to cover the whole area */
   margin-top: 0;
@@ -38,7 +38,7 @@
 }
 
 .language {
-  color: #b1b1b1;
+  color: #9b9b9b;
   margin-bottom: 5px;
 
   @media (max-width: 480px) {
@@ -54,9 +54,10 @@
   display: block;
   font-size: 1.2em;
   font-weight: 550;
-  color: #ffffff;
+  color: #e4e4e4;
   text-decoration: none;
   margin-left: 10px;
+  margin-right: 10px;
 
   @media (max-width: 480px) {
       font-size: 1em;
