--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,6 +1,6 @@
 .about {
     padding: 60px 20px;
-    background-color: #fcfcfc;
+    background-color: #f5f5f5;
     text-align: center;
   }
   
@@ -61,3 +61,24 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
+
+  .tools-container {
+    color: #fff;
+    text-align: center;
+    padding: 40px 5%;
+    margin: 0;
+  }
+  
+
+  
+  .tech-icons {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    flex-wrap: wrap;
+  }
+  
+  .tech-icons img {
+    width: 50px;
+    height: 50px;
+  }
