--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -82,3 +82,47 @@
     width: 50px;
     height: 50px;
   }
+
+  .code-box {
+    justify-self: center;
+    padding: 1rem;
+    border: 1px solid #ddd;
+    width: 600px;
+    border-radius: 3px;
+    margin-bottom: 1rem;
+    font-family: 'Courier New', Courier, monospace;
+    overflow-x: auto;
+    position: relative;
+  }
+  
+  .code-box pre {
+    margin: 0;
+  }
+  
+  .copy-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 0.5rem;
+    color: rgb(214, 214, 214);
+    border: none;
+    border-radius: 4px;
+    max-width: 200px;
+    cursor: pointer;
+    font-size: 1.2rem;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .copy-btn:hover {
+    background-color: #ffffff;
+  }
+  
+  .copy-btn svg {
+    pointer-events: none; /* Prevents the icon from interfering with button clicks */
+  }
+  
+  
+  
